# cplusplus_template_cmake_gtest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LibraryCode.h
src/: CMakeLists.txt  LibraryCode.cpp
test/: CMakeLists.txt  test.cpp
test/include/: test.h
